<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.details.NewsDetailsFragment">

    <!--    <com.google.android.material.appbar.MaterialToolbar-->
    <!--        android:id="@+id/toolbar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:title="Details"-->
    <!--        app:titleCentered="true"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:navigationIcon="@drawable/angleleft_24"-->
    <!--        />-->

    <ImageView
        android:id="@+id/article_image"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/article_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/bookmark_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_image" />

    <ImageButton
        android:id="@+id/bookmark_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:background="@null"
        android:contentDescription="@string/bookmark"
        android:src="@drawable/bookmark_24"
        app:layout_constraintBottom_toBottomOf="@id/article_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/article_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/description_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_title" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/date_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_description" />

    <TextView
        android:id="@+id/article_source"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/source_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/go_to_source_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/go_to_source"
        android:src="@drawable/websource_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--    <ImageButton-->
    <!--        android:id="@+id/share_button"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:background="?attr/selectableItemBackgroundBorderless"-->
    <!--        android:contentDescription="@string/share"-->
    <!--        android:src="@drawable/share_square_24"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/toolbar"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="@id/toolbar" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
