<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="7dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingTop="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="2dp">

            <ImageView
                android:id="@+id/imgCover"
                android:layout_width="100dp"
                android:layout_height="84dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:scaleType="centerCrop"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="15dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/feed_news_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgCover"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="China reports first coronavirus case in Wuhan since April 3 among 14 new infections - Reuters" />


            <TextView
                android:id="@+id/tvPublisherTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="10dp"
                android:text="@string/publishedat"
                app:layout_constraintStart_toEndOf="@id/imgCover"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:text="10-05-2024" />

            <TextView
                android:id="@+id/tvSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="10dp"
                android:text="@string/source"
                app:layout_constraintStart_toEndOf="@id/tvPublisherTime"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>